fixed overflow x and stats buttnon

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -19,9 +19,11 @@
 display: none;
 }  */
 
-body{
+body,html{
     overflow-x: hidden;
     background-color: #FFF7EC;
+    width: 100vw;
+    max-width: 100vw;
 }
 
 .swap-button{
@@ -41,7 +43,7 @@ animation-timing-function: linear;
 }
 
 .dashboard-container{
-    min-width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
     margin-bottom: 2rem;
 }
@@ -51,7 +53,7 @@ animation-timing-function: linear;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     margin: 4rem auto;
 }
 .btn{
@@ -78,6 +80,8 @@ animation-timing-function: linear;
 .stats-button{
 background-color:white;
 color: black;
+position: relative;
+z-index: 9999;
 }
 
 .habbit-icon-container{
@@ -257,34 +261,8 @@ background-color: rgba(255, 0, 0, 0.527);
     width: 100%;
     height: 100%;
 }
-/* FOOTER */
 
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    background-color: var(--primary);
-    font-family: var(--font-accent);
 
-}
-
-footer p {
-    font-size: 19px;
-    font-family: var(--font-accent);
-}
-
-footer a {
-    text-decoration: none;
-    color: var(--header-color);
-    font-weight: bold;
-}
-
-footer a:hover {
-    color: rgb(155, 81, 224);
-}
 .habit-title{
     text-transform: capitalize;
 }
